# PocketTeam

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml  pocketteam-monitor.yml  pocketteam-sdk-test.yml
dashboard/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
dashboard/src/frontend/: App.tsx  constants.ts  index.css  index.html  main.tsx  types.ts
dashboard/src/frontend/components/: AgentTile.tsx  ConnectionBadge.tsx  ErrorBoundary.tsx  EventFeed.tsx  KillSwitchBanner.tsx  (+1 more)
dashboard/src/server/: auth.ts  index.ts  redaction.ts  roleMap.ts  server.ts
docs/: CONFIGURATION.md  DASHBOARD.md  HOOKS.md  TROUBLESHOOTING.md
examples/: full_pipeline.py  self_healing.py  simple_task.py
pocketteam/: __init__.py  cli.py  config.py  constants.py  dashboard.py  github_setup.py  init.py  insights_scheduler.py  jsonl.py  mcp_telegram.py  telegram_daemon.py  telegram_daemon_plist.py  telegram_daemon_systemd.py  utils.py
pocketteam/agents/: __init__.py  base.py  coo.py  devops.py  documentation.py  engineer.py  investigator.py  monitor.py  observer.py  observer_cli.py  planner.py  product.py  qa.py  reviewer.py  security.py
pocketteam/agents/prompts/: coo.md  devops.md  documentation.md  engineer.md  investigator.md  monitor.md  observer.md  planner.md  product.md  qa.md  reviewer.md  security.md
pocketteam/browse/: browser.ts  commands.ts  index.ts  package.json  ptbrowse  server.ts  snapshot.ts
pocketteam/channels/: remote.py  setup.py
pocketteam/core/: __init__.py  budget.py  context.py  orchestrator.py  pipeline.py
pocketteam/hooks/: __main__.py  _utils.py  agent_lifecycle.py  context_warning.py  cost_tracker.py  delegation_enforcer.py  keyword_detector.py  observer_trigger.py  pre_compact.py  session_start.py  session_stop.py  telegram_inbox.py
pocketteam/modules/: base_module.py
pocketteam/modules/autoresearch/: __init__.py  module.py  tracker.py
pocketteam/monitoring/: escalation.py  healer.py  watcher.py
pocketteam/safety/: __init__.py  __main__.py  activity_logger.py  allowlist.py  audit_log.py  dsac.py  guardian.py  kill_switch.py  mcp_rules.py  network_rules.py  rate_limiter.py  rules.py  sensitive_paths.py
pocketteam/skills/: MANIFEST.json  add-mcp-server.md  architecture-docs.md  architecture-review.md  atomic-commits.md  autopilot.md  breaking-change-plan.md  browse.md  clarify.md  competitive-analysis.md  cost-report.md  create-skill.md  dashboard-deploy.md  db-diagnostics.md  debug.md  dependency-scan.md  design-review.md  discuss.md  e2e-test.md  escalation.md  handoff-spec.md  health-check.md  hotfix.md  insights-manage.md  investigate.md  log-analysis.md  map-codebase.md  market-research.md  owasp-audit.md  pause-resume.md  performance-review.md  pocketteam-help.md  product-brief.md  propose-improvements.md  quick.md  ralph.md  receive-review.md  retro.md  review.md  risk-assessment.md  (+21 more)
pocketteam/statusline/: index.js
pocketteam/tools/: activity_logger.py  browser_tools.py  coordination.py  deploy_tools.py  health_check.py  test_runner.py
tests/: test_activity_logger.py  test_agents.py  test_allowed_audit_and_rate_limits.py  test_browser_tools.py  test_budget.py  test_channels.py  test_cli_health_logs.py  test_cli_help.py  test_cli_insights.py  test_cli_launch.py  test_computer_use.py  test_config.py  test_context_awareness.py  test_coordination.py  test_cost_tracker.py  test_dashboard.py  test_deploy_health.py  test_dsac_guardian_integration.py  test_e2e.py  test_guardian.py  test_hooks.py  test_hooks_coverage.py  test_init.py  test_insights.py  test_insights_scheduler.py  test_modules.py  test_monitoring.py  test_observer.py  test_orchestrator.py  test_safety_layer1.py  test_safety_layer10.py  test_safety_layer2.py  test_safety_layer3.py  test_safety_layer4.py  test_safety_layer5.py  test_safety_layer6.py  test_safety_layer7.py  test_safety_layer8.py  test_safety_layer9.py  test_safety_openclaw.py  (+4 more)
tests/sdk_integration/: conftest.py  fake_app.py  test_fake_app.py  test_healer_integration.py  test_healer_live.py  test_init_github.py
(+34 files in other folders)
